# formidable-backend

./: .gitignore  .pylintrc  Makefile  README.md  lint.sh  mypy.ini  pyproject.toml  template.config.yml
.github/: dependabot.yml
src/: check_config_vars.py  createsuperuser.py  random_seed.py
src/administration/migrations/: 0001_initial.py  0002_alter_user_id.py
src/common/: admin.py  models.py  urls.py
src/formidable/: abstractions.py  admin.py  api.py  apps.py  constants.py  forms.py  inlines.py  model_fields.py  models.py  serializers.py  urls.py  utils.py  views.py
src/formidable/api/: __init__.py  application.py  form.py  response.py  section.py
src/formidable/migrations/: 0001_initial.py  0002_auto_20210121_2159.py  0003_auto_20210121_2205.py  0004_auto_20210121_2205.py  0005_auto_20210130_1206.py  0006_auto_20210130_1315.py  0007_auto_20210130_1445.py  0008_auto_20210213_1700.py  0009_auto_20210215_1850.py  0010_auto_20210215_1912.py  0011_auto_20210217_2111.py  0012_alter_response_application.py  0013_application_applicant.py  0014_auto_20210516_0119.py  0015_auto_20210517_0408.py  0016_alter_application_form.py  0017_auto_20210518_0236.py  0018_field_is_required.py  0019_auto_20210831_1326.py  0020_auto_20210831_1908.py  0021_alter_form_description.py  0022_alter_section_description.py  0023_auto_20210904_0116.py  0024_historicalapplication_historicalfield_historicalresponse_historicalsection.py  0025_auto_20210904_0354.py  0026_auto_20210904_1743.py  0027_auto_20210906_1226.py
src/formidable/models/: __init__.py  application.py  choice.py  field.py  form.py  response.py  section.py  validator.py
src/formidable/serializers/: __init__.py  application.py  choice.py  field.py  form.py  request.py  response.py  section.py  validator.py
src/main/: urls.py
src/main/settings/: __init__.py  common.py  dev.py
src/staticfiles/css/: custom.css
src/tests/: factories.py
src/tests/formidable/: factories.py
src/tests/formidable/api/: test_applications_api.py  test_forms_api.py  test_nested_responses_api.py  tests_forms_api.py
src/tests/tests_api/: tests_forms_api.py
