[tool.poetry]
name = "Formidable backend"
version = "0.1.0"
description = "A form management system API"
authors = ["Dan Percic <danpercic86@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2b1"
psycopg2-binary = "^2.8.6"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
Pillow = "^8.1.0"
django-admin-thumbnails = "^0.2.5"
PyYAML = "^5.4.1"
docutils = "^0.16"
django-model-utils = "^4.1.1"
drf-spectacular = "^0.12.0"
django-jazzmin = "^2.4.4"
django-tabular-permissions = "^2.8"
dj-rest-auth = {extras = ["with_social"], version = "^2.1.3"}
djangorestframework-simplejwt = "^4.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
black = "^20.8b1"
pycodestyle = "^2.6.0"
django-querycount = "^0.7.0"
django-debug-toolbar = "^3.2"
nplusone = "^1.0.0"
django-extra-checks = "^0.8.0"

[tool.black]
target-version = ['py38']
exclude = '''
/(
    \.git
  | \__pycache__
  | \venv
  | \.venv
)/
'''

[tool.pylint.messages_control]
disable = """
    C0330,
    C0326,
    missing-class-docstring,
    missing-module-docstring,
    too-few-public-methods,
    unused-wildcard-import,
    wildcard-import,
    unsubscriptable-object,
    missing-function-docstring,
    ungrouped-imports,
    no-member,
    too-many-ancestors,
    import-outside-toplevel,
    protected-access
"""

[tool.pylint.master]
ignore = """
    migrations
"""

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
